[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "intelliflow-openenv"
version = "1.0.0"
description = "IntelliFlow Urban Traffic Control - OpenEnv RL Environment"
requires-python = ">=3.9"
dependencies = [
    "openenv>=2.0.0",
    "fastapi",
    "uvicorn",
    "openai",
    "requests",
]

[project.scripts]
server = "app.api.main:start"
